# GeoCoreFusion

./: .gitignore  CHANGELOG.md  README.md  VERSION  environment.yml  pyproject.toml
configs/: 3dssz_roi.yaml  3dssz_roi_fusion_v3.yaml  3dssz_roi_fusion_v4.yaml  3dssz_roi_fusion_v5.yaml  3dssz_roi_fusion_v5_matched.yaml  3dssz_roi_fusion_v6.yaml  3dssz_roi_fusion_v61.yaml  3dssz_roi_fusion_v61_benchmark.yaml  3dssz_roi_fusion_v7.yaml  3dssz_roi_registration_v2.yaml  template.yaml  zkh3_roi.yaml  zkh3_roi_fusion_v3.yaml  zkh3_roi_fusion_v4.yaml  zkh3_roi_fusion_v5.yaml  zkh3_roi_fusion_v5_matched.yaml  zkh3_roi_fusion_v6.yaml  zkh3_roi_fusion_v61.yaml  zkh3_roi_fusion_v61_benchmark.yaml  zkh3_roi_fusion_v7.yaml  zkh3_roi_registration_v2.yaml
docs/: v4自动控制点配准与细节增强.md  v5空间细节恢复与人工复核.md  v6.1视觉全细节融合与验证.md  传感器与数据核验.md  技术路线实现.md  真实数据可行性验证.md  配准优化与人工复核.md
scripts/: build_v61_document.py  build_v61_figures.py  build_v6_document.py  build_v6_figures.py  build_v7_figures.py  build_v8_document.py  build_v8_figures.py  compare_spatial_detail_candidates.py  diagnose_registration_residuals.py  export_v6_word_batches.ps1  export_word_pdf_simple.ps1  extract_docx_structure.py  inventory_docx_package.py  make_docx_contact_sheets.py  merge_pdf_batches.py  render_pdf_pages.py  run_v6_benchmarks.py  run_v7_amplitude_fixed_benchmarks.py  run_v8_cached_abundance_sweep.py  run_v8_detail_sweep.py  run_v8_identifiability.py  run_v8_wald_benchmark.py  summarize_v7_results.py  summarize_v8_detail_sweep.py  validate_outputs.py
tests/: test_envi.py  test_fusion.py  test_identifiability.py  (+9 more)
(+24 files in other folders)
