[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocorefusion"
version = "0.5.0"
description = "Physics-aware RGB-NIR-SWIR drill-core registration, spectral harmonization, and coefficient-space fusion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "opencv-contrib-python-headless>=4.8",
  "Pillow>=10",
  "PyYAML>=6",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
neural = ["torch>=2.1"]
test = ["pytest>=7"]

[project.scripts]
geocorefusion = "geocorefusion.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
